# ts-git

./: .eslintrc.json  .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  turbo.json  vercel.json
.github/workflows/: ci.yml
docs/: astro.config.mjs  package.json  vercel.json
docs/src/components/: Sidebar.astro
docs/src/content/docs/: index.mdx  roadmap.md
docs/src/content/docs/commands/: add.md  (+13 more)
examples/ui/: .gitignore  index.html  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
examples/ui/e2e/: plan.md
examples/ui/src/: index.ts  main.ts  styles.css
examples/ui/src/components/: VimEditor.ts
examples/ui/src/lib/: icons.ts
examples/with-memory-fs/: package.json  playwright.config.ts  tailwind.config.js
examples/with-memory-fs/e2e/tests/: smoke.spec.ts
examples/with-memory-fs/src/: contentPreviewPath.test.ts  main.ts
examples/with-tauri-fs/: index.html  package.json  playwright.config.ts  vite.config.ts
examples/with-tauri-fs/src/: App.ts  app-overrides.css  index.css  main.tsx
examples/with-tauri-fs/src-tauri/: Cargo.toml  tauri.conf.json
examples/with-tauri-fs/src-tauri/capabilities/: default.json
examples/with-tauri-fs/src-tauri/icons/: icon.icns
examples/with-tauri-fs/src-tauri/src/: main.rs
examples/with-zen-fs/: .gitignore  README.md  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
examples/with-zen-fs/public/: manifest.json  sw.js
examples/with-zen-fs/src/: App.ts  main.ts
scripts/: create-golden-repo.sh
(+23 files in other folders)
